Enabled linkXRef for checkstyle in pom.xml; verify phase does NOT currently run as we use "mvn package"; concious choice as the build now passes but flags errors

--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>false</failsOnError>
-                    <linkXRef>false</linkXRef>
+                    <linkXRef>true</linkXRef>
                 </configuration>
                 <executions>
                     <execution>
