--- a/pom.xml
+++ b/pom.xml
@@ -141,9 +141,8 @@
             <artifactId>gson</artifactId>
             <version>2.8.1</version>
         </dependency>
-
     </dependencies>
-   <reporting>
+   <!-- <reporting>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -158,7 +157,7 @@
           </reportSets>
         </plugin>
       </plugins>
-    </reporting>
+    </reporting> -->
     <build>
         <plugins>
             <plugin>
