--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
-                <version>${maven-jxr-plugin.version}</version>
+                <version>3.0.0</version>
                 <!-- <configuration>
                     <linkJavadoc>true</linkJavadoc>
                     <javadocDir>/path/to/javadocs</javadocDir>
